--- a/README
+++ b/README
@@ -1,11 +1,10 @@
-To run this application you must specify a twitter accept. To do so add a file called "login.plist" to the Res directory and add it to your project. The file contents should be:
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-    <key>username</key>
-    <string>myUsername</string>
-    <key>password</key>
-    <string>myPassword</string>
-</dict>
-</plist>
+To run this application you must specify a twitter account. To do so, you must be running iOS5 or newer. In the settings app, add a Twitter account. iBBQ will use the first account listed in the Twitter section of the Settings app.
+
+The application is admittedly rough since it's a demo of what can be thrown together in a Sunday afternoon. To use it:
+- Set up Twitter account (see above)
+- Launch the app
+- See your location in the detail view (hard-coded to a location in Guelph if you're using the simulator)
+- Notice the message: You're grilling ribs and ran out of beer
+- Choose a liquor store on the left hand side
+- Click the Twitter bird to send out a tweet asking for help with your situation
+- Tweet failure is generally due to trying to tweet too often (or too soon after your last tweet), the Twitter API has restrictions on stuff like that.
